<resources>
    <string name="app_name">HexaLibre</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Fine</string>
    <string name="menu_slideshow">Order Status</string>
    <string name="HS">Honor Score</string>
    <string name="sign_out">Sign Out</string>
    <string name="help">Help</string>
    <string name="history">History</string>
    <string name="button_description">Sign out</string>
    <string name="welcome_message"><![CDATA[<b>Hi User,</b><br/>What would you like to do today?]]></string>
</resources>