<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.darkhex.hexalibre.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fine"
        android:name="com.darkhex.hexalibre.ui.fine.FineFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/activity_fine" />

    <fragment
        android:id="@+id/nav_order_status"
        android:name="com.darkhex.hexalibre.ui.honorscore.HonorscoreFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_HS"
        android:name="com.darkhex.hexalibre.ui.honorscore.HonorscoreFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/activity_honorscore" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.darkhex.hexalibre.ui.history.HistoryFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/activity_history" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.darkhex.hexalibre.ui.help.HelpFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/activity_help" />
</navigation>